# world-id-relay

./: .dockerignore  .gitignore  CODEOWNERS  Cargo.toml  Dockerfile  README.md  SECURITY.md  config.stage.toml  config.toml  rustfmt.toml
.github/workflows/: ci.yml  relyance.yml
src/: abi.rs  abis.rs  block_scanner.rs  config.rs  main.rs  relay.rs  transaction.rs  tx_monitoring.rs  tx_sitter.rs  utils.rs
src/relay/: mod.rs  signer.rs
