[package]
name = "world-id-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
color-eyre = "0.6"
axum = "0.7"
app-task = "0.4.0"
clap = { version = "4.4.8", features = ["derive", "env"] }
config = "0.14.0"
criterion = { version = "0.5.1", features = ["async", "async_futures"] }
dotenv = "0.15.0"
alloy = { version = "0.3", features = [
    "providers",
    "contract",
    "serde",
    "rpc-types-eth",
    "transports",
    "hyper",
    "signer-local",
    "signers",
] }
eyre = "0.6"
futures = "0.3"
governor = "0.6.0"
hex = "0.4"
ethers = { version = "2.0.10", features = ["ws", "ipc", "openssl", "abigen"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
tx-sitter-client = "1.0.10"
maplit = "1.0.2"
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
ruint = "1.11.0"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
take_mut = "0.2.2"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git" }
thiserror = "1.0"
tokio = { version = "1.34.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.5.0"
futures-core = "0.3.30"
hex-literal = "0.4.1"
indicatif = "0.17.8"
reqwest = { version = "0.12", features = ["json"] }
statrs = "0.17.1"
tokio-retry = "0.3.0"
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f899add7116ccc1228f5e5e5ee2e2e233768", features = [
    "depth_30",
] }

[dev-dependencies]
tempfile = "3.10.1"
testcontainers = "0.23"
indoc = "2.0.5"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1.34.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "process",
] }

[profile.release]
debug = true
strip = false
