[package]
name = "world-id-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = { version = "0.6", package = "color-eyre" }
clap = { version = "4.4.8", features = ["derive", "env"] }
# https://github.com/rust-cli/config-rs/pull/597
config = { version = "0.14.0", git = "https://github.com/ewoolsey/config-rs", branch = "env_list_of_structs" }
dotenv = "0.15.0"
alloy = { version = "0.5", features = [
    "providers",
    "contract",
    "serde",
    "rpc-types-eth",
    "transports",
    "hyper",
    "signer-local",
    "signer-mnemonic",
    "signers",
] }
ethers-core = "*"
alloy-signer-local = { version = "0.5" }
futures = "0.3"
hex = "0.4"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tx-sitter-client = { git = "https://github.com/worldcoin/signup-sequencer", rev = "f30275b" }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
ruint = "1.11.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git", rev = "7af994c" }
thiserror = "1.0"
tokio = { version = "1.41.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.5.0"
futures-core = "0.3.30"
hex-literal = "0.4.1"
reqwest = { version = "0.12", features = ["json"] }
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f89", features = [
    "depth_30",
] }

# Solana
# solana-sdk = { git = "https://github.com/anza-xyz/agave" }
# solana-client = { git = "https://github.com/anza-xyz/agave" }
solana-sdk = "1.18.10"
solana-client = "1.18.10"
solana-world-id-program = { git = "https://github.com/wormholelabs-xyz/solana-world-id-program" }

[dev-dependencies]
tempfile = "3.10.1"
testcontainers = "0.23"
indoc = "2.0.5"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1.41.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "process",
] }


# [patch.crates-io]
# # for details, see https://github.com/anza-xyz/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
# crossbeam-epoch = { git = "https://github.com/anza-xyz/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }
#
# solana-curve25519 = { git = "https://github.com/anza-xyz/agave" }
# solana-program = { git = "https://github.com/anza-xyz/agave" }
# solana-zk-sdk = { git = "https://github.com/anza-xyz/agave" }
# solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave" }
#
# [profile.dev.package.curve25519-dalek]
# opt-level = 3
#
# [patch.crates-io.tokio]
# git = "https://github.com/anza-xyz/solana-tokio.git"
# rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21"
