[package]
name = "world-id-relay"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
eyre = { version = "0.6", package = "color-eyre" }
clap = { version = "4.5.29", features = ["derive", "env"] }
# https://github.com/rust-cli/config-rs/pull/597
config = { version = "0.14.0", git = "https://github.com/0xforerunner/config-rs", branch = "env_list_of_structs" }
dotenv = "0.15.0"
alloy = { version = "0.6", features = [
    "providers",
    "contract",
    "serde",
    "rpc-types-eth",
    "transports",
    "hyper",
    "signer-local",
    "signer-mnemonic",
    "signers",
] }
ethers-core = "*"
alloy-signer-local = { version = "0.6" }
futures = "0.3"
hex = "0.4"
hyper = { version = "1", features = ["server", "http1", "http2"] }
tx-sitter-client = { git = "https://github.com/worldcoin/signup-sequencer", rev = "f30275b" }
rand = { version = "0.8.5", features = ["small_rng"] }
rayon = "1.10.0"
ruint = "1.11.0"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1.16"
telemetry-batteries = { git = "https://github.com/worldcoin/telemetry-batteries.git" }
thiserror = "2"
tokio = { version = "1.48.0", features = ["sync", "macros", "rt-multi-thread"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3.18"
url = "2.5.4"
futures-core = "0.3.30"
hex-literal = "0.4.1"
reqwest = { version = "0.12", features = ["json"] }
semaphore = { git = "https://github.com/worldcoin/semaphore-rs", rev = "d0d1f89", features = [
    "depth_30",
] }

[dev-dependencies]
tempfile = "3.17.1"
testcontainers = "0.23"
indoc = "2.0.5"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1.48.0", features = [
    "sync",
    "macros",
    "rt-multi-thread",
    "process",
] }
